rnsc/test_data/rns_integration/error/parser/package_directive/trailing_tokens_recovers.rns
.class MyClass
.super java/lang/Object
.package com.example trailing_tokens

     unknown_token ; <- still reported
